--- a/server-root/createAccount.html
+++ b/server-root/createAccount.html
@@ -3,14 +3,14 @@
 
 <body>
 
-    <h2>Login</h2>
+    <h2>Create Account</h2>
 
-    <form action="/api/login" method="POST">
+    <form action="/api/createAccount" method="POST">
         <label for="username">Username</label><br>
         <input type="text" id="username" name="username" value=""><br>
         <label for="password">Password</label><br>
         <input type="password" id="password" name="password" value=""><br><br>
-        <input type="submit" value="Submit">
+        <input type="submit" value="Create Account">
     </form>
 
 
