--- a/server-root/index.html
+++ b/server-root/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <body>
-    
-<p2>Welcome to the public homepage! You are currently not logged in.</p2>
-<p>
-<a href="login.html">Login</a>
-</p>
+    <p>
+        <p2>Welcome to the public homepage!</p2>
+    </p>
+    <p>
+        You are currently not logged in.
+        <a href="login.html">Login</a>
+    </p>
+    <p>
+        <a href="createAccount.html">Create Account</a>
+    </p>
 </body>
+
 </html>
