JWTs now used to identify authenticated users

--- a/server-root/index.html
+++ b/server-root/index.html
@@ -6,7 +6,9 @@
         <p2>Welcome to the public homepage!</p2>
     </p>
     <p>
-        You are currently not logged in.
+        <a href="private/privatehome.html">Private Homepage</a>
+    </p>
+    <p>
         <a href="login.html">Login</a>
     </p>
     <p>
