--- a/server-root/private/privatehome.html
+++ b/server-root/private/privatehome.html
@@ -4,6 +4,9 @@
 <body>
 
     <p2>Welcome to the private homepage! You are currently logged in</p2>
+    <p>
+        <a href="secrets.txt">secret.txt</a>
+    </p>
 
 </body>
 
